# plyr.fm

./: .dockerignore  .env.example  .gitignore  .modified_files  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COSTS.md  Dockerfile  HTTP_CONNECTION_LIMITATION.md  ISSUE_entity_search.md  LICENSE  README.md  STATUS.md  compose.yaml  fly.staging.toml  fly.toml  justfile  loq.toml  podcast_script.txt  pyproject.toml
.claude/commands/: check-spans.md  consider-review.md  deploy.md  enable-flag.md  implement.md  investigate-report.md  onboard.md  research.md  screenshot-docs.md  status-update.md
.github/: path-filters.yml
.github/workflows/: CLAUDE.md  build-docker.yml  check-rust.yml  deploy-backend.yml  deploy-docs.yml  deploy-frontend-prod.yml  deploy-frontend-staging.yml  deploy-moderation.yml  deploy-prod.yml  deploy-production.yml  deploy-redis.yml  deploy-staging.yml  deploy-storybook.yml  export-costs.yml  integration-tests.yml  run-moderation-loop.yml  run-pre-commit.yml  status-maintenance.yml  test-backend.yml  test-storybook.yml  test-transcoder.yml  upload-audio.yml
.status_history/: 2025-11.md  2025-12.md  2026-01.md  2026-02.md  2026-03.md  2026-04.md  2026-05.md  2026-06.md
alembic/: env.py
alembic/versions/: 06daebe03213_add_user_preferences_table.py  2025_11_02_12_21_41_06daebe03213_add_user_preferences_table.py  2025_11_02_12_22_19_9e8c7aa5b945_add_user_preferences_table_fixed.py  2025_11_03_18_13_14_5684967eb462_add_queue_state_table.py  2025_11_04_00_27_13_008ffaa79bea_merge_queue_and_auto_advance_migrations.py  2025_11_12_01_54_02_14fff0296365_add_image_url_to_tracks.py  2025_11_12_14_34_51_07c4ad820a27_add_notification_sent_to_tracks.py  2025_11_13_100209_30344721c491_add_album_slug_column_to_tracks.py  2025_11_13_210000_add_albums_table.py  2d6d201752ef_add_performance_indexes_on_track_.py  2d9a62e170d6_add_pds_url_to_artists_table_for_caching.py  31e69ba0c570_add_timezone_support_to_datetime_columns.py  36868f2c20e5_add_image_id_to_tracks.py  547a171dfd11_drop_old_artist_columns.py  9e8c7aa5b945_add_user_preferences_table_fixed.py  aabe82c8f0fb_add_features_column_to_tracks.py  ba46ea4ba64e_remove_unique_constraint_from_tracks_.py  bcb5c0fd5d43_add_auto_advance_preference.py  ec40ac6453bc_add_exchange_tokens_table_for_secure_.py
backend/: .env.example  Dockerfile  alembic.ini  fly.staging.toml  fly.toml  justfile  loq.toml  pyproject.toml
backend/alembic/: env.py
backend/scripts/: backfill_track_self_labels.py  init_db.py  migrate_images_to_new_buckets.py  release
backend/tests/: CLAUDE.md  __init__.py  conftest.py  docker-compose.yml  test_audio_formats.py  test_auth.py  test_background_tasks.py  test_constellation.py  test_cors_origins.py  test_database.py  test_image_formats.py  test_integration_upload.py  test_jetstream.py  test_lexicon_validation.py  test_moderation.py  test_origin_trust.py  test_pds_create_like_tombstone.py  test_pds_network_retry.py  test_post_create_hooks.py  test_rate_limit.py  test_recommendations.py  test_scope_validation.py  test_security_headers.py  (+9 more)
clap/: app.py
docs/: CLAUDE.md  README.md  artist-identity-refactor.md  artists.md  atproto-integration-plan.md  atproto-oauth-gap-analysis.md  authentication.md  cloudflare-deployment.md  configuration.md  content-gating-roadmap.md  contributing.md  developers.md  glossary.md  index.md  index.mdx  listeners.md  logfire-querying.md  neon-mcp-guide.md  offboarding.md  pdsx-guide.md  phase1-r2-implementation.md  phase2-atproto-records.md  queue-design.md  rate-limiting.md  security.md  testing-with-atproto-records.md  theming.md  troubleshooting.md  ui-performance-assessment.md
docs-internal/: rate-limiting.md  security.md
docs-site/: astro.config.mjs  bun.lockb  justfile  package.json  wrangler.toml
frontend/: .env.example  .prettierignore  CLAUDE.md  bun.lockb  eslint.config.js  justfile  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts  vitest.storybook.config.ts  wrangler.toml
lexicons/: audio.ooo.track.json  authFullApp.json  comment.json  like.json  list.json  privateMedia.json  privateMediaAccess.json  profile.json  track.json
moderation/: Cargo.toml  Dockerfile  Justfile
moderation/src/: admin.rs  audd.rs  auth.rs  claude.rs  config.rs  db.rs  handlers.rs  labels.rs  main.rs  reports.rs  review.rs  state.rs  xrpc.rs
moderation/static/: admin.css  admin.html  admin.js
redis/: fly.toml
scripts/: atproto-records  audd_costs.py  audit_alac_m4a.py  backfill_account_status.py  backfill_alac_transcodes.py  backfill_artist_identity.py  backfill_atproto_records.py  backfill_avatars.py  backfill_copyright_labels.py  backfill_duration.py  backfill_embeddings.py  backfill_genres.py  backfill_image_orientation.py  backfill_image_urls.py  backfill_label_context.py  backfill_thumbnails.py  cf_analytics.py  check_legal_dates.py  check_r2_images.py  copy_r2_buckets.py  delete_track.py  docket_runs.py  drone_smoke_test.py  feature_flag.py  gen_oauth_jwk.py  generate_audio_sample.py  generate_tts.py  letta_status_agent.py  migrate.sh  migrate_artists.py  migrate_atproto_namespace.py  migrate_cdn_urls.py  migrate_images_to_new_buckets.py  migrate_r2_bucket.py  migrate_sensitive_images.py  mint_dev_token.py  ml_audit.py  moderation_agent.py  moderation_loop.py  notify_deploy_failure.py  (+16 more)
services/osprey/: Dockerfile  fly.toml  justfile  pyproject.toml
services/osprey/plugin/: __init__.py  input_stream.py  output_sink.py
services/osprey/plugin/udfs/: __init__.py
services/osprey/rules/: main.sml
services/osprey/rules/models/: base.sml  copyright.sml  image.sml
services/osprey/rules/rules/blocklist/: index.sml
services/osprey/rules/rules/copyright/: index.sml
services/osprey/rules/rules/images/: index.sml
tests/: CLAUDE.md  __init__.py  conftest.py  docker-compose.yml  test_audio_formats.py  test_auth.py  test_database.py  test_image_formats.py  test_origin_validation.py  test_queue.py  test_r2_upload.py  test_settings.py  test_token_refresh.py
transcoder/: Cargo.toml  Justfile  justfile
(+1070 files in other folders)
