[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plyr-osprey"
version = "0.1.0"
description = "plyr.fm Osprey rules engine plugin"
requires-python = ">=3.11"
dependencies = [
    "osprey-worker @ git+https://github.com/roostorg/osprey.git#subdirectory=osprey_worker",
    "osprey-rpc @ git+https://github.com/roostorg/osprey.git#subdirectory=osprey_rpc",
    "redis>=5.0",
    "httpx>=0.27",
]

[project.entry-points."osprey_plugin"]
plyr = "plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["plugin*"]
